aicode/mslang/tests/errors/type_error_add.ms
// Test: add incompatible types
var x = 1 + true; // expect runtime error: Operands must be two numbers or two strings.
